[project]
name = "bet-agentic-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "wizzyszn",email = "wisdomolubayoadedoyin@yahoo.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "uagents (>=0.22.3,<0.23.0)",
    "solders (>=0.26.0,<0.27.0)",
    "base58 (>=2.1.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false 